Fixed stretched image in ProfileCard

--- a/components/Card/ProfileCard/ProfileCard.module.scss
+++ b/components/Card/ProfileCard/ProfileCard.module.scss
@@ -1,117 +1,118 @@
 @import "@/styles/_variables.scss";
 
 .card {
-  display: flex;
-  width: 100%;
-  flex-direction: column;
-  background-color: white;
-  border: 1px solid $stroke;
-  border-radius: 15px;
-  padding: 2rem 1.75rem 1rem 1.75rem;
-  box-shadow: 0 25px 25px -30px rgba(24, 21, 41, 0.2);
-  transform: scale(1);
-  transition: box-shadow 0.15s ease-in-out, border 0.15s ease-in-out,
-    transform 0.1s ease-in-out;
-  overflow: hidden;
-  &:hover {
-    box-shadow: 0 25px 25px -30px #0083b799;
-    border: 1px solid #b5dbea;
-    transform: scale(1.015);
-  }
+	display: flex;
+	width: 100%;
+	flex-direction: column;
+	background-color: white;
+	border: 1px solid $stroke;
+	border-radius: 15px;
+	padding: 2rem 1.75rem 1rem 1.75rem;
+	box-shadow: 0 25px 25px -30px rgba(24, 21, 41, 0.2);
+	transform: scale(1);
+	transition: box-shadow 0.15s ease-in-out, border 0.15s ease-in-out,
+		transform 0.1s ease-in-out;
+	overflow: hidden;
+	&:hover {
+		box-shadow: 0 25px 25px -30px #0083b799;
+		border: 1px solid #b5dbea;
+		transform: scale(1.015);
+	}
 }
 
 .date {
-  color: $dark-light;
-  font-size: 12px;
-  margin-bottom: 0.5rem;
+	color: $dark-light;
+	font-size: 12px;
+	margin-bottom: 0.5rem;
 }
 
 .content {
-  text-align: center;
-  margin: 1.25rem 0 2rem 0;
-  flex: 1;
+	text-align: center;
+	margin: 1.25rem 0 2rem 0;
+	flex: 1;
 }
 
 .subtitle {
-  margin-top: 0.4rem;
-  font-size: 14px;
-  text-transform: capitalize;
+	margin-top: 0.4rem;
+	font-size: 14px;
+	text-transform: capitalize;
 }
 
 .image {
-  width: 125px;
-  height: 125px;
-  border-radius: 50%;
-  outline: none;
-  border: 4px solid #0083b74a;
-  margin: 0 auto;
+	width: 125px;
+	height: 125px;
+	border-radius: 50%;
+	outline: none;
+	border: 4px solid #0083b74a;
+	margin: 0 auto;
+	object-fit: cover;
 }
 
 .pin {
-  width: 9px;
-  margin-right: 0.4rem;
+	width: 9px;
+	margin-right: 0.4rem;
 }
 
 .location {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 1rem;
-  font-size: 12px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin-top: 1rem;
+	font-size: 12px;
 
-  color: $dark-light;
+	color: $dark-light;
 }
 
 .divider {
-  width: 100%;
-  border: none;
-  border-bottom: 0.5px solid $stroke;
+	width: 100%;
+	border: none;
+	border-bottom: 0.5px solid $stroke;
 }
 
 .tags {
-  flex-wrap: nowrap !important;
-  overflow: hidden;
-  position: relative;
-  &::after {
-    content: "";
-    display: block;
-    position: absolute;
-    left: 0;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    background: linear-gradient(
-      to right,
-      transparent 80%,
-      rgba(255, 255, 255, 0.846)
-    );
-  }
+	flex-wrap: nowrap !important;
+	overflow: hidden;
+	position: relative;
+	&::after {
+		content: "";
+		display: block;
+		position: absolute;
+		left: 0;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		background: linear-gradient(
+			to right,
+			transparent 80%,
+			rgba(255, 255, 255, 0.846)
+		);
+	}
 }
 
 .title {
-  font-size: 24px;
+	font-size: 24px;
 }
 
 .locationSeparator {
-  margin: 0 0.25rem;
+	margin: 0 0.25rem;
 }
 
 .likeButton {
-  position: absolute;
-  top: 1rem;
-  right: 1rem;
+	position: absolute;
+	top: 1rem;
+	right: 1rem;
 }
 
 .titlePlaceholder {
-  height: 18px;
-  width: 80%;
-  margin: 0 auto;
+	height: 18px;
+	width: 80%;
+	margin: 0 auto;
 }
 
 .subtitlePlaceholder {
-  height: 16px;
-  width: 60%;
+	height: 16px;
+	width: 60%;
 
-  margin: 0 auto;
-  margin-top: 0.4rem;
+	margin: 0 auto;
+	margin-top: 0.4rem;
 }
